--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">My Application</string>
-
-    <string name="loading_please_wait">Loading please wait...</string>
-    <string name="download_start_error">Could not start download!</string>
+    <string name="app_name">OfflinePlayback</string>
 </resources>
